hdone/objects/Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <description>Schedule status</description>
        <inlineHelpText>Schedule status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Claimed</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Quality Review</fullName>
                </value>
                <value>
                    <fullName>Not Eligible For Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_addressid__c</fullName>
        <description>AddressId from storage object. Original customer addresses moved off platform to storage such as Big Object. Used to map back for reporting</description>
        <inlineHelpText>AddressId from storage object</inlineHelpText>
        <label>Storage_addressid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalHours__c</fullName>
        <description>Calculates total hours for schedule item by subtracting date/time value. Used for reporting.</description>
        <formula>ROUND(MOD((EndDateTime__c - StartDateTime__c)*24,24),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculation of total hours for schedule item by subtracting date/time values.</inlineHelpText>
        <label>TotalHours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Appointment_Hours__c</fullName>
        <description>Total number of hours for appointments for this Schedule</description>
        <inlineHelpText>Total number of hours for appointments</inlineHelpText>
        <label>Total Appointment Hours</label>
        <summarizedField>Appointment__c.Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Appointment__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Schedule</label>
    <listViews>
        <fullName>Next_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Status__c</columns>
        <columns>DayOfWeek__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>EndDateTime__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Next 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Next_Month</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Status__c</columns>
        <columns>DayOfWeek__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>EndDateTime__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Next Month</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Status__c</columns>
        <columns>DayOfWeek__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>EndDateTime__c</columns>
        <columns>Comment__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <listViews>
        <fullName>This_Week</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Status__c</columns>
        <columns>DayOfWeek__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>EndDateTime__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Status__c</columns>
        <columns>DayOfWeek__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>EndDateTime__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>Weekends_Next_Month</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Status__c</columns>
        <columns>DayOfWeek__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>EndDateTime__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>DayOfWeek__c</field>
            <operation>equals</operation>
            <value>Saturday</value>
        </filters>
        <filters>
            <field>DayOfWeek__c</field>
            <operation>equals</operation>
            <value>Sunday</value>
        </filters>
        <label>Weekends Next Month</label>
    </listViews>
    <listViews>
        <fullName>Weekends_This_Month</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Status__c</columns>
        <columns>DayOfWeek__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>EndDateTime__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>DayOfWeek__c</field>
            <operation>equals</operation>
            <value>Saturday</value>
        </filters>
        <filters>
            <field>DayOfWeek__c</field>
            <operation>equals</operation>
            <value>Sunday</value>
        </filters>
        <label>Weekends This Month</label>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Status__c</columns>
        <columns>DayOfWeek__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>EndDateTime__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday</label>
    </listViews>
    <nameField>
        <displayFormat>sch-{00000000}</displayFormat>
        <label>Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <recordTypes>
        <fullName>Appointment_Only</fullName>
        <active>true</active>
        <description>Schedule based on appointment time and NOT tied to specific location</description>
        <label>Appointment Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location_Based</fullName>
        <active>true</active>
        <description>Indicates schedule information is tied to a specific location</description>
        <label>Location Based</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mturk</fullName>
        <active>true</active>
        <description>Schedules for Mturk services</description>
        <label>Mturk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Media</fullName>
        <active>true</active>
        <description>Social Media Schedules</description>
        <label>Social Media</label>
    </recordTypes>
    <recordTypes>
        <fullName>System_Scheduler</fullName>
        <active>true</active>
        <description>Used for scheduling system activities such as Process Builder</description>
        <label>System Scheduler</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>